--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,3 @@
-[user]
-	email = artyom.katsap@gmail.com
-	name = Artyom Katsap
 [alias]
 	co = checkout
 	br = branch
@@ -8,3 +5,6 @@
 	st = status
 	last = log -1 HEAD
 	unstage = reset HEAD --
+[user]
+	email = artyom.katsap@ride.vision
+	name = Artyom Katsap
